# monomorph

./: Makefile  README.md  monomorph.cabal  monomorphize-plugin.cabal  to-do.md
src/: .ghci
src/Monomorph/: Interactive.hs  Plugin.hs  Stuff.hs
src/Monomorphize/: Stuff.hs
test/: Examples.hs  Go.hss  Makefile  recipe.hss  settings.hss
