Name:                monomorph
Version:             0.0.0
Cabal-Version:       >= 1.6
Synopsis:            
Category:            GHC plugin
Description:
  A GHC plugin for monomorphization.
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2016 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/conal/monomorph.git

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base<5
                     , ghc >= 7.10.3
                     , containers
                     , data-default-class >= 0.0.1
                     , kure
                     , hermit >= 1.0.0.1
                     , hermit-extras >= 0.4.0
                     , circat
-- try removing ghc dep later
  Exposed-Modules:
                       Monomorph.Stuff
                       Monomorph.Interactive
                       Monomorph.Plugin
                       
  ghc-options:         -Wall
